force-app/main/default/objects/webm__Webmerge_Mapping__c/webm__Webmerge_Mapping__c.object-meta.xml
<CustomObject>
    <label>Webmerge Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webmerge Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>