force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Active__c.field-meta.xml
<CustomField>
    <fullName>webm__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>