force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Autogenerate__c.field-meta.xml
<CustomField>
    <fullName>webm__Autogenerate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autogenerate</label>
    <type>Checkbox</type>
</CustomField>