force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Batch__c.field-meta.xml
<CustomField>
    <fullName>webm__Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use batch mode when generating document</description>
    <label>Batch</label>
    <type>Checkbox</type>
</CustomField>