force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Description__c.field-meta.xml
<CustomField>
    <fullName>webm__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>