force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Evaluation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>webm__Evaluation_Criteria__c</fullName>
    <label>Evaluation Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>created</fullName>
            </value>
            <value>
                <fullName>created, and every time it&apos;s edited</fullName>
            </value>
            <value>
                <fullName>created, and any time it&apos;s edited to subsequently meet criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>