force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Filter__c.field-meta.xml
<CustomField>
    <fullName>webm__Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter</label>
    <type>Checkbox</type>
</CustomField>