force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>webm__Filter_Type__c</fullName>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All conditions are met</fullName>
                <default>true</default>
                <label>All conditions are met</label>
            </value>
            <value>
                <fullName>Any conditions are met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>