force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Post_to_Chatter__c.field-meta.xml
<CustomField>
    <fullName>webm__Post_to_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post merged documents to Chatter</description>
    <label>Post to Chatter</label>
    <type>Checkbox</type>
</CustomField>