force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Post_to_Chatter_Feeds__c.field-meta.xml
<CustomField>
    <fullName>webm__Post_to_Chatter_Feeds__c</fullName>
    <description>Comma separated list of Field Names for related object&apos;s chatter feeds</description>
    <label>Post to Chatter Feeds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>