force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Preview__c.field-meta.xml
<CustomField>
    <fullName>webm__Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preview</label>
    <type>Checkbox</type>
</CustomField>