force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Resource__c.field-meta.xml
<CustomField>
    <fullName>webm__Resource__c</fullName>
    <label>Resource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
                <default>true</default>
                <label>Document</label>
            </value>
            <value>
                <fullName>Route</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>