force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>webm__Salesforce_Object__c</fullName>
    <label>Salesforce Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>