force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Salesforce_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>webm__Salesforce_Object_Name__c</fullName>
    <label>Salesforce Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>