force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Save_Attachment__c.field-meta.xml
<CustomField>
    <fullName>webm__Save_Attachment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Save merged documents as an Attachment on the record</description>
    <label>Save Attachment</label>
    <type>Checkbox</type>
</CustomField>