force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Save_File__c.field-meta.xml
<CustomField>
    <fullName>webm__Save_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save File</label>
    <type>Checkbox</type>
</CustomField>