force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Test_Mode__c.field-meta.xml
<CustomField>
    <fullName>webm__Test_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Mode</label>
    <type>Checkbox</type>
</CustomField>