force-app/main/default/objects/webm__Webmerge_Mapping__c/fields/webm__Webmerge_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>webm__Webmerge_Document_Id__c</fullName>
    <label>Webmerge Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>